--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,13 +18,13 @@ logger = "1.0.2"
 avifCoder = "2.1.4"
 avifCoderCoil = "2.1.4"
 aire = "0.18.1"
-jxlCoder = "2.5.1"
-jxlCoderCoil = "2.5.1.1"
+jxlCoder = "2.5.2"
+jxlCoderCoil = "2.5.2"
 jpegliCoder = "1.0.2"
 
 tesseract = "4.9.0"
-material3 = "1.5.0-alpha06"
-composeVersion = "1.10.0-alpha05"
+material3 = "1.5.0-alpha07"
+composeVersion = "1.10.0-beta01"
 materialIconsExtended = "1.7.8"
 androidx-datastorePreferencesAndroid = "1.1.7"
 appUpdateKtx = "2.1.0"
@@ -50,7 +50,7 @@ coil = "3.3.0"
 appCompat = "1.7.1"
 androidxCore = "1.17.0"
 desugaring = "2.1.5"
-activityCompose = "1.12.0-alpha09"
+activityCompose = "1.12.0-beta01"
 kotlinxCollectionsImmutable = "0.4.0"
 scrollbar = "2.2.0"
 reorderable = "3.0.0"
@@ -58,14 +58,14 @@ reviewKtx = "2.0.2"
 splashScreen = "1.2.0-rc01"
 
 espresso = "3.7.0"
-ksp = "2.2.20-2.0.4"
+ksp = "2.3.0"
 
 androidx-test-ext-junit = "1.3.0"
 documentfile = "1.1.0"
 uiautomator = "2.3.0"
 androidxMacroBenchmark = "1.4.1"
 
-material = "1.14.0-alpha05"
+material = "1.14.0-alpha06"
 jsoup = "1.21.2"
 androidliquidglass = "1.0.0-beta03"
 capsule = "2.1.0"
@@ -74,7 +74,7 @@ mlkitDocumentScanner = "16.0.0"
 zxingAndroidEmbedded = "4.3.0"
 moshi = "1.15.2"
 bouncycastle = "1.82"
-pdfviewer = "1.0.0-alpha10"
+pdfviewer = "1.0.0-alpha11"
 fragmentCompose = "1.8.9"
 
 firebaseCrashlyticsGradle = "3.0.6"
