--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,8 +23,8 @@ jxlCoderCoil = "2.5.2"
 jpegliCoder = "1.0.2"
 
 tesseract = "4.9.0"
-material3 = "1.5.0-alpha07"
-composeVersion = "1.10.0-beta01"
+material3 = "1.5.0-alpha08"
+composeVersion = "1.10.0-beta02"
 materialIconsExtended = "1.7.8"
 androidx-datastorePreferencesAndroid = "1.1.7"
 appUpdateKtx = "2.1.0"
@@ -45,17 +45,17 @@ agp = "8.13.0"
 hilt = "2.57.2"
 gms = "4.4.4"
 
-ktor = "3.3.1"
+ktor = "3.3.2"
 coil = "3.3.0"
 appCompat = "1.7.1"
 androidxCore = "1.17.0"
 desugaring = "2.1.5"
-activityCompose = "1.12.0-beta01"
+activityCompose = "1.12.0-rc01"
 kotlinxCollectionsImmutable = "0.4.0"
 scrollbar = "2.2.0"
 reorderable = "3.0.0"
 reviewKtx = "2.0.2"
-splashScreen = "1.2.0-rc01"
+splashScreen = "1.2.0"
 
 espresso = "3.7.0"
 ksp = "2.3.1"
