--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ versionCode = "187"
 
 jvmTarget = "17"
 
-imageToolboxLibs = "4.6.2"
+imageToolboxLibs = "4.7.0"
 trickle = "1.3.0"
 evaluator = "1.0.0"
 quickie = "1.15.7"
@@ -134,6 +134,7 @@ toolbox-jhlabs = { module = "com.github.T8RIN.ImageToolboxLibs:jhlabs", version.
 toolbox-ascii = { module = "com.github.T8RIN.ImageToolboxLibs:ascii", version.ref = "imageToolboxLibs" }
 toolbox-documentscanner = { module = "com.github.T8RIN.ImageToolboxLibs:documentscanner", version.ref = "imageToolboxLibs" }
 toolbox-qrose = { module = "com.github.T8RIN.ImageToolboxLibs:qrose", version.ref = "imageToolboxLibs" }
+toolbox-palette = { module = "com.github.T8RIN.ImageToolboxLibs:palette", version.ref = "imageToolboxLibs" }
 
 aire = { module = "com.github.awxkee:aire", version.ref = "aire" }
 jpegli-coder = { module = "com.github.awxkee:jpegli-coder", version.ref = "jpegliCoder" }
