--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "23"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.4.0-beta02"
-versionCode = "187"
+versionName = "3.4.0-rc01"
+versionCode = "188"
 
 jvmTarget = "17"
 
