Added ability to search color with their name by #2306

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ versionCode = "190"
 
 jvmTarget = "17"
 
-imageToolboxLibs = "4.7.6"
+imageToolboxLibs = "4.8.0"
 trickle = "1.3.0"
 evaluator = "1.0.0"
 quickie = "1.15.7"
@@ -24,9 +24,9 @@ jpegliCoder = "1.0.2"
 
 tesseract = "4.9.0"
 material3 = "1.5.0-alpha08"
-composeVersion = "1.10.0-beta02"
+composeVersion = "1.10.0-rc01"
 materialIconsExtended = "1.7.8"
-androidx-datastorePreferencesAndroid = "1.1.7"
+androidx-datastorePreferencesAndroid = "1.2.0"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
 shadowGadgets = "2.3.1"
@@ -50,7 +50,7 @@ coil = "3.3.0"
 appCompat = "1.7.1"
 androidxCore = "1.17.0"
 desugaring = "2.1.5"
-activityCompose = "1.12.0-rc01"
+activityCompose = "1.12.0"
 kotlinxCollectionsImmutable = "0.4.0"
 scrollbar = "2.2.0"
 reorderable = "3.0.0"
@@ -65,7 +65,7 @@ documentfile = "1.1.0"
 uiautomator = "2.3.0"
 androidxMacroBenchmark = "1.4.1"
 
-material = "1.14.0-alpha06"
+material = "1.14.0-alpha07"
 jsoup = "1.21.2"
 androidliquidglass = "1.0.0-rc01"
 capsule = "2.1.0"
