Rename FOSS and Market APKs to *-signed.apk
Added steps to rename APK files after build.

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,6 +22,12 @@ jobs:
           cache: gradle
 
       - run: bash ./gradlew assembleRelease
+
+      - name: Rename FOSS APK to *-signed.apk
+        run: |
+          for f in app/build/outputs/apk/foss/release/*.apk; do
+            mv "$f" "${f%.apk}-signed.apk"
+          done
       
       - uses: iota9star/sign-android-release@v1.0.5
         name: Sign FOSS APK
@@ -41,6 +47,12 @@ jobs:
         with:
           name: Signed apks FOSS
           path: app/build/outputs/apk/foss/release/*-signed.apk
+
+      - name: Rename Market APK to *-signed.apk
+        run: |
+          for f in app/build/outputs/apk/market/release/*.apk; do
+            mv "$f" "${f%.apk}-signed.apk"
+          done
 
       - uses: iota9star/sign-android-release@v1.0.5
         name: Sign Market APK
