--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,50 +14,40 @@ jobs:
         with:
           swap-size-gb: 10
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'adopt'
+          java-package: 'jdk'
           cache: gradle
 
-      - name: Install Android SDK Command line tools and Build Tools 36
+      - name: Build APKs
+        run: | 
+          ./gradlew assembleRelease
+
+      - name: Set up Keystore
         run: |
-            mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
-            cd $ANDROID_SDK_ROOT/cmdline-tools
-            wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-            unzip cmdline-tools.zip
-            rm cmdline-tools.zip
-            mv cmdline-tools latest
-            yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "build-tools;36.0.0"
-        env:
-            ANDROID_SDK_ROOT: ${{ runner.tool_cache }}/android-sdk
-    
-      
-      - run: bash ./gradlew assembleRelease
+          sudo apt update -y || true
+          sudo apt install -y --no-install-recommends coreutils
+          mkdir -p $RUNNER_TEMP/keystores
+          echo "${{ secrets.SIGNING_KEY }}" | base64 --decode > $RUNNER_TEMP/keystores/keystore.jks
+
 
       - name: Sign FOSS APK
         run: |
-          echo "${SIGNING_KEY}" | base64 --decode > /tmp/keystore.jks
-          chmod 600 /tmp/keystore.jks
+          ANDROID_SDK_PATH=$ANDROID_HOME/build-tools/35.0.0/apksigner
           for apk in app/build/outputs/apk/foss/release/*.apk; do
-            $ANDROID_SDK_ROOT/build-tools/36.0.0/apksigner sign \
-              --ks /tmp/keystore.jks \
-              --ks-key-alias "${ALIAS}" \
-              --ks-pass pass:"${KEY_STORE_PASS}" \
-              --key-pass pass:"${KEY_PASS}" \
+            $ANDROID_SDK_PATH sign \
+              --ks $RUNNER_TEMP/keystores/keystore.jks \
+              --ks-key-alias ${{ secrets.ALIAS }} \
+              --ks-pass pass:${{ secrets.KEY_STORE_PASS }} \
+              --key-pass pass:${{ secrets.KEY_STORE_PASS }} \
               --out "$apk" \
               "$apk"
           done
-          rm -f /tmp/keystore.jks
-        env:
-          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
-          ALIAS: ${{ secrets.ALIAS }}
-          KEY_STORE_PASS: ${{ secrets.KEY_STORE_PASS }}
-          KEY_PASS: ${{ secrets.KEY_STORE_PASS }}
-          ANDROID_SDK_ROOT: ${{ runner.tool_cache }}/android-sdk
 
       - uses: actions/upload-artifact@v4
         with:
@@ -66,24 +56,16 @@ jobs:
 
       - name: Sign Market APK
         run: |
-          echo "${SIGNING_KEY}" | base64 --decode > /tmp/keystore.jks
-          chmod 600 /tmp/keystore.jks
+          ANDROID_SDK_PATH=$ANDROID_HOME/build-tools/35.0.0/apksigner
           for apk in app/build/outputs/apk/market/release/*.apk; do
-            $ANDROID_SDK_ROOT/build-tools/36.0.0/apksigner sign \
-              --ks /tmp/keystore.jks \
-              --ks-key-alias "${ALIAS}" \
-              --ks-pass pass:"${KEY_STORE_PASS}" \
-              --key-pass pass:"${KEY_PASS}" \
+            $ANDROID_SDK_PATH sign \
+              --ks $RUNNER_TEMP/keystores/keystore.jks \
+              --ks-key-alias ${{ secrets.ALIAS }} \
+              --ks-pass pass:${{ secrets.KEY_STORE_PASS }} \
+              --key-pass pass:${{ secrets.KEY_STORE_PASS }} \
               --out "$apk" \
               "$apk"
           done
-          rm -f /tmp/keystore.jks
-        env:
-          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
-          ALIAS: ${{ secrets.ALIAS }}
-          KEY_STORE_PASS: ${{ secrets.KEY_STORE_PASS }}
-          KEY_PASS: ${{ secrets.KEY_STORE_PASS }}
-          ANDROID_SDK_ROOT: ${{ runner.tool_cache }}/android-sdk
 
       - uses: actions/upload-artifact@v4
         with:
