--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,8 +25,7 @@ jobs:
           cache: gradle
 
       - name: Build APKs
-        run: | 
-          ./gradlew assembleRelease
+        run: bash ./gradlew assembleRelease
 
       - name: Set up Keystore
         run: |
