--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -47,7 +47,8 @@ jobs:
               "$apk"
           done
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload FOSS APKs
+        uses: actions/upload-artifact@v4
         with:
           name: Signed FOSS APKs
           path: app/build/outputs/apk/foss/release/*.apk
@@ -71,7 +72,8 @@ jobs:
               "$apk"
           done
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload Market APKs
+        uses: actions/upload-artifact@v4
         with:
           name: Signed apks Market
           path: app/build/outputs/apk/market/release/*.apk
