--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "23"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.5.0-alpha01"
-versionCode = "193"
+versionName = "3.5.0"
+versionCode = "194"
 
 jvmTarget = "17"
 
