--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,12 +3,12 @@ androidMinSdk = "23"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.5.2"
-versionCode = "196"
+versionName = "3.5.3-alpha01"
+versionCode = "197"
 
 jvmTarget = "17"
 
-imageToolboxLibs = "5.1.0"
+imageToolboxLibs = "5.1.1"
 trickle = "1.3.0"
 evaluator = "1.0.0"
 quickie = "1.15.7"
