--- a/.github/workflows/android_market.yml
+++ b/.github/workflows/android_market.yml
@@ -1,4 +1,4 @@
-name: Android CI
+name: Android CI Market
 
 on:
   workflow_dispatch:
@@ -30,31 +30,6 @@ jobs:
           sudo apt install -y --no-install-recommends coreutils
           mkdir -p $RUNNER_TEMP/keystores
           echo "${{ secrets.SIGNING_KEY }}" | base64 --decode > $RUNNER_TEMP/keystores/keystore.jks
-
-      - name: Build FOSS APKs
-        run: bash ./gradlew assembleFossRelease
-
-      - name: Sign FOSS APKs
-        run: |
-          ANDROID_SDK_PATH=$ANDROID_HOME/build-tools/35.0.0/apksigner
-          for apk in app/build/outputs/apk/foss/release/*.apk; do
-            $ANDROID_SDK_PATH sign \
-              --ks $RUNNER_TEMP/keystores/keystore.jks \
-              --ks-key-alias ${{ secrets.ALIAS }} \
-              --ks-pass pass:${{ secrets.KEY_STORE_PASS }} \
-              --key-pass pass:${{ secrets.KEY_STORE_PASS }} \
-              --out "$apk" \
-              "$apk"
-          done
-
-      - name: Upload FOSS APKs
-        uses: actions/upload-artifact@v4
-        with:
-          name: Signed FOSS APKs
-          path: app/build/outputs/apk/foss/release/*.apk
-
-      - name: Delete FOSS APKs
-        run: rm -rf app/build/outputs/apk/foss
 
       - name: Build Market APKs
         run: bash ./gradlew assembleMarketRelease
