--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,10 +23,10 @@ jxlCoderCoil = "2.5.2"
 jpegliCoder = "1.0.2"
 
 tesseract = "4.9.0"
-material3 = "1.5.0-alpha11"
-composeVersion = "1.11.0-alpha02"
+material3 = "1.5.0-alpha12"
+composeVersion = "1.11.0-alpha03"
 materialIconsExtended = "1.7.8"
-androidx-datastorePreferencesAndroid = "1.2.0"
+androidx-datastorePreferencesAndroid = "1.3.0-alpha04"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
 shadowGadgets = "2.3.1"
@@ -48,9 +48,9 @@ gms = "4.4.4"
 ktor = "3.3.3"
 coil = "3.3.0"
 appCompat = "1.7.1"
-androidxCore = "1.17.0"
+androidxCore = "1.18.0-alpha01"
 desugaring = "2.1.5"
-activityCompose = "1.12.2"
+activityCompose = "1.13.0-alpha01"
 kotlinxCollectionsImmutable = "0.4.0"
 scrollbar = "2.2.0"
 reorderable = "3.0.0"
