--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ versionCode = "200"
 jvmTarget = "17"
 
 imageToolboxLibs = "5.3.5"
-trickle = "1.3.0"
+trickle = "1.3.1"
 evaluator = "1.0.0"
 quickie = "1.16.0"
 fadingEdges = "1.0.4"
@@ -91,7 +91,7 @@ aboutlibraries-m3 = { module = "com.mikepenz:aboutlibraries-compose-m3", version
 moshi = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
 moshi-adapters = { module = "com.squareup.moshi:moshi-adapters", version.ref = "moshi" }
 symbol-processing-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
-trickle = { module = "com.github.t8rin:trickle", version.ref = "trickle" }
+trickle = { module = "com.github.T8RIN:Trickle", version.ref = "trickle" }
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 mlkit-document-scanner = { module = "com.google.android.gms:play-services-mlkit-document-scanner", version.ref = "mlkitDocumentScanner" }
 quickie-bundled = { module = "com.github.T8RIN.QuickieExtended:quickie-bundled", version.ref = "quickie" }
