--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ versionCode = "201"
 
 jvmTarget = "21"
 
-imageToolboxLibs = "5.3.5"
+imageToolboxLibs = "5.4.0"
 trickle = "1.4.0"
 evaluator = "1.0.0"
 quickie = "1.16.0"
@@ -23,10 +23,10 @@ jxlCoderCoil = "2.5.2"
 jpegliCoder = "1.0.2"
 
 tesseract = "4.9.0"
-material3 = "1.5.0-alpha12"
-composeVersion = "1.11.0-alpha03"
+material3 = "1.5.0-alpha13"
+composeVersion = "1.11.0-alpha04"
 materialIconsExtended = "1.7.8"
-androidx-datastorePreferencesAndroid = "1.3.0-alpha04"
+androidx-datastorePreferencesAndroid = "1.3.0-alpha05"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
 shadowGadgets = "2.3.1"
@@ -63,12 +63,13 @@ ksp = "2.3.5"
 androidx-test-ext-junit = "1.3.0"
 documentfile = "1.1.0"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.1"
+androidxMacroBenchmark = "1.5.0-alpha02"
 
 material = "1.14.0-alpha09"
 jsoup = "1.22.1"
 androidliquidglass = "1.0.5"
 capsule = "2.1.3"
+squircle-shape = "5.0.0"
 
 mlkitDocumentScanner = "16.0.0"
 zxingAndroidEmbedded = "4.3.0"
@@ -82,6 +83,7 @@ aboutlibraries = "13.2.1"
 moduleGraphGradle = "0.13.0"
 
 [libraries]
+squircle-shape = { group = "com.stoyanvuchev", name = "squircle-shape-android", version.ref = "squircle-shape" }
 capsule = { module = "io.github.kyant0:capsule", version.ref = "capsule" }
 androidliquidglass = { module = "io.github.kyant0:backdrop", version.ref = "androidliquidglass" }
 androidx-fragment-compose = { module = "androidx.fragment:fragment-compose", version.ref = "fragmentCompose" }
