--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "23"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.6.0-rc02"
-versionCode = "202"
+versionName = "3.6.0"
+versionCode = "203"
 
 jvmTarget = "21"
 
