--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ jvmTarget = "21"
 imageToolboxLibs = "5.4.0"
 trickle = "1.4.0"
 evaluator = "1.0.0"
-quickie = "1.16.0"
+quickie = "1.17.0"
 fadingEdges = "1.0.4"
 logger = "1.0.2"
 
@@ -72,7 +72,6 @@ capsule = "2.1.3"
 squircle-shape = "5.0.0"
 
 mlkitDocumentScanner = "16.0.0"
-zxingAndroidEmbedded = "4.3.0"
 moshi = "1.15.2"
 bouncycastle = "1.83"
 pdfviewer = "1.0.0-alpha12"
@@ -82,8 +81,10 @@ firebaseCrashlyticsGradle = "3.0.6"
 aboutlibraries = "13.2.1"
 moduleGraphGradle = "0.13.0"
 flinger = "2.0.2"
+zxingCore = "3.5.4"
 
 [libraries]
+zxing-core = { module = "com.google.zxing:core", version.ref = "zxingCore" }
 flinger = { module = "com.github.iamjosephmj.flinger:flinger", version.ref = "flinger" }
 squircle-shape = { group = "com.stoyanvuchev", name = "squircle-shape-android", version.ref = "squircle-shape" }
 capsule = { module = "io.github.kyant0:capsule", version.ref = "capsule" }
@@ -100,7 +101,6 @@ jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 mlkit-document-scanner = { module = "com.google.android.gms:play-services-mlkit-document-scanner", version.ref = "mlkitDocumentScanner" }
 quickie-bundled = { module = "com.github.T8RIN.QuickieExtended:quickie-bundled", version.ref = "quickie" }
 quickie-foss = { module = "com.github.T8RIN.QuickieExtended:quickie-foss", version.ref = "quickie" }
-zxing-android-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxingAndroidEmbedded" }
 
 toolbox-cropper = { module = "com.github.T8RIN.ImageToolboxLibs:cropper", version.ref = "imageToolboxLibs" }
 toolbox-dynamicTheme = { module = "com.github.T8RIN.ImageToolboxLibs:dynamic-theme", version.ref = "imageToolboxLibs" }
