--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "23"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.6.2"
-versionCode = "205"
+versionName = "3.6.2-alpha01"
+versionCode = "206"
 
 jvmTarget = "21"
 
