--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,5 @@ android.nonTransitiveRClass=true
 android.nonFinalResIds=true
 org.gradle.parallel=true
 kotlin.daemon.jvmargs=-Xmx16g
+android.builtInKotlin=true
+android.newDsl=true
