--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "23"
 androidTargetSdk = "36"
 androidCompileSdk = "36"
 
-versionName = "3.6.2-alpha02"
-versionCode = "207"
+versionName = "3.6.2-beta01"
+versionCode = "208"
 
 jvmTarget = "21"
 
